WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220134
Fix scrolling issues when scrolling on only one axis is enabled
https://bugs.webkit.org/show_bug.cgi?id=220134
Summary
Fix scrolling issues when scrolling on only one axis is enabled
Simon Fraser (smfr)
Reported
2020-12-23 18:56:53 PST
Fix scrolling issues when scrolling on only one axis is enabled
Attachments
Patch
(16.84 KB, patch)
2020-12-23 19:02 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-12-23 19:02:18 PST
Created
attachment 416735
[details]
Patch
EWS
Comment 2
2020-12-26 10:29:05 PST
Committed
r271090
: <
https://trac.webkit.org/changeset/271090
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416735
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-26 10:30:18 PST
<
rdar://problem/72682427
>
Dima Voytenko
Comment 4
2021-01-27 12:09:54 PST
(In reply to Simon Fraser (smfr) from
comment #1
)
> Created
attachment 416735
[details]
> Patch
Would this also address the issue reported in the
https://bugs.webkit.org/show_bug.cgi?id=209486
?
Simon Fraser (smfr)
Comment 5
2021-01-27 13:00:40 PST
No, that's specific to iOS which uses different scrolling code.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug