Fix scrolling issues when scrolling on only one axis is enabled https://bugs.webkit.org/show_bug.cgi?id=220134

Reviewed by Sam Weinig.

Source/WebCore:

If an overflow:scroll has overflow on an axis, but overflow:hidden on that
axis, then there are various issues with finding the correct scroller and
latching.

This affects nested scrollers where inner and outer and scrollable on different
axes, and the inner scroller has overflow, but overflow:hidden on the cross axis.

The fix involves adding checks for scrolling being allowed in code that fetches
pinned state, and code that looks for scrollable areas for a given event delta.

Tests: fast/scrolling/mac/overflow-hidden-on-one-axis-async-overflow.html
       fast/scrolling/mac/overflow-hidden-on-one-axis.html

* page/mac/EventHandlerMac.mm:
(WebCore::findEnclosingScrollableContainer):
* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::edgePinnedState const):
* page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.mm:
(WebCore::ScrollingTreeScrollingNodeDelegateMac::isPinnedForScrollDeltaOnAxis const):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::isPinnedForScrollDeltaOnAxis const):
(WebCore::ScrollableArea::isPinnedForScrollDelta const): Check for non-zero deltas.
isPinnedForScrollDeltaOnAxis() returns false if a delta is zero, so we don't want to say
we're not pinned if a delta is zero. The logic of this code really needs to be inverted
to talk about scrollability, not pinning.
(WebCore::ScrollableArea::edgePinnedState const):

LayoutTests:

* fast/scrolling/mac/overflow-hidden-on-one-axis-async-overflow-expected.txt: Added.
* fast/scrolling/mac/overflow-hidden-on-one-axis-async-overflow.html: Added.
* fast/scrolling/mac/overflow-hidden-on-one-axis-expected.txt: Added.
* fast/scrolling/mac/overflow-hidden-on-one-axis.html: Added.


Canonical link: https://commits.webkit.org/232687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271090 268f45cc-cd09-0410-ab3c-d52691b4dbfc